sites/navy/clusters/dal-navy-core-1/wave-5/overlays/plex/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
  annotations:
    cert-manager.io/cluster-issuer: dalmura-letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: plex.indigo.dalmura.cloud
    external-dns.alpha.kubernetes.io/target: indigo.dalmura.cloud
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: true
spec:
  ingressClassName: ingress-public
  tls:
    - hosts:
      - plex.indigo.dalmura.cloud
      secretName: plex-cert
  rules:
  - host: plex.indigo.dalmura.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: plex-plex-media-server
            port:
              number: 32400
